--- a/obsidian.css
+++ b/obsidian.css
@@ -1485,11 +1485,15 @@ input.prompt-input {
 }
 
 /* Editor */
-
+.mod-root .workspace-tab-header-container
+{
+	margin-right:3px;
+}
 .mod-vertical .workspace-tab-header-container-inner
 {
 	margin:0px;
 	padding:0px;
+	
 }
 .mod-vertical .workspace-tab-header
 {
@@ -1543,10 +1547,8 @@ input.prompt-input {
 	margin:0px;
 	padding:0px;	
 }
-.workspace-tab-header-tab-list
-{
-	box-shadow: var(--bevelStyleButton);
-}
+
+
 .mod-root .workspace-tab-header-container .workspace-tab-header-inner-close-button
 {
 	background-color: transparent;
@@ -1565,17 +1567,34 @@ input.prompt-input {
 {
 	margin:auto;
 }
+.workspace-tab-header-tab-list,
 .workspace-tab-header-new-tab 
 {
 	margin:0px;
 	padding:0px;
 	box-shadow: var(--bevelStyleButton);
+	background-color: var(--background);
+	
+	
 }
+.mod-top .workspace-tab-header-tab-list,
+.mod-top .workspace-tab-header-new-tab 
+{
+	margin-top:10px;
+}
+.workspace-tab-header-new-tab:hover
+{
+}
+.workspace-tab-header-tab-list .clickable-icon,
 .workspace-tab-header-new-tab .clickable-icon
 {
 	box-shadow: none;
 }
-
+.workspace-tab-header-tab-list .clickable-icon:hover,
+.workspace-tab-header-new-tab .clickable-icon:hover
+{
+	background-color: transparent;
+}
 /* NT sizing */
 
 .workspace-tab-header-container:not(.mod-top .workspace-tab-header-container)
