--- a/obsidian.css
+++ b/obsidian.css
@@ -479,22 +479,22 @@ body .workspace-tabs
 }
 .collapse-indicator.collapse-icon
 {
+	
 	width:30px;
 	opacity:1;
-	margin-left:10px !important;
 	padding:0px;
 	margin:0px;
-	padding-left:10px;
+	padding-left:5px;
 	color:red;
 	margin:auto;
 	box-shadow:var(--bevelStyleButton);
 }
 .markdown-reading-view .collapse-indicator.collapse-icon
 {
+	margin-top:30px;
 	margin-left:-30px !important;
 	width:30px;
 	margin:auto;
-	padding-left:10px;
 }
 /* New approach to crushing textboxes */
 
@@ -1620,7 +1620,6 @@ input.prompt-input {
 {
 	margin:0px;
 	padding:0px;
-	
 }
 .mod-vertical .workspace-tab-header
 {
